cmake_minimum_required(VERSION 3.1)
project(spcc)
include_directories(
    include
)
set(SOURCE
    src/buffer.cc
    src/decl.cc
    src/diagnostic.cc
    src/expr.cc
    src/keyword.cc
    src/main.cc
    src/options.cc
    src/test.cc
    src/type.cc
    src/platform.cc
    src/pp.cc
    src/pp_regex.cc
    src/punctuator.cc
    src/utf8.cc
)
set(INCLUDE
    include/buffer.hh
    include/decl.hh
    include/diagnostic.hh
    include/expr.hh
    include/keyword.hh
    include/optional.hh
    include/options.hh
    include/string_view.hh
    include/test.hh
    include/token.hh
    include/type.hh
    include/platform.hh
    include/pp.hh
    include/punctuator.hh
    include/utf8.hh
    include/util.hh
)
add_executable(spcc
    ${SOURCE}
    ${INCLUDE}
)
set_property(TARGET spcc PROPERTY CXX_STANDARD 14)
